--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <title>Miko Translation | Free AI Translation</title>
     <meta
       name="description"
-      content="A translator app that uses OpenAI GPT-3 to translate between languages. It is a PWA that can be installed on your phone or desktop."
+      content="A translator app that uses Miko to translate between languages. It is a PWA that can be installed on your phone or desktop."
     />
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,7 +13,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover, interactive-widget=resizes-content"
     />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="OpenAI Translator" />
+    <meta name="apple-mobile-web-app-title" content="Miko Translation | Free AI Translation" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="theme-color" content="#047AFF" />
     <link rel="icon" type="image/png" href="/favicon.png" />
