--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,17 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="apple-touch-icon" href="/openai-translator-apple-touch-icon.png" />
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-N03BRL4PDG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-N03BRL4PDG');
+  </script>
 
   <body class="flex flex-col flex-1 w-full">
     <div id="root" class="transition-all drawer drawer-end"></div>
