--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,11 @@
     <title>Miko Translation | Free AI Translation</title>
     <meta
       name="description"
-      content="A translator app that uses Miko to translate between languages. It is a PWA that can be installed on your phone or desktop."
+      content="Best ai translator. A free AI translator app that uses GPT-4o to translate between languages. It is a PWA that can be installed on your phone or desktop."
+    />
+    <meta
+      name="keywords"
+      content="ai translator,best ai translator,ai translator free,free ai translator,ai translator app,translator,spanish translator,language translator,english to spanish translator,japanese translator,translator spanish to english,chinese translator"
     />
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
